--- a/package.json
+++ b/package.json
@@ -41,8 +41,12 @@
     "@storybook/addon-actions": "^6.1.18",
     "@storybook/addon-essentials": "^6.1.18",
     "@storybook/addon-links": "^6.1.18",
+    "@storybook/addon-storyshots": "^6.1.18",
     "@storybook/node-logger": "^6.1.18",
     "@storybook/preset-create-react-app": "^3.1.6",
-    "@storybook/react": "^6.1.18"
+    "@storybook/react": "^6.1.18",
+    "babel-plugin-macros": "^2.8.0",
+    "react-test-renderer": "^17.0.1",
+    "require-context.macro": "^1.2.2"
   }
 }
